--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -2,8 +2,16 @@
 
 .header {
 	height: 119px;
-	background-color: var(--primary);
+	background-color: var(--secondary-two);
 	border-bottom: 1px solid var(--border-header);
+
+	@media (max-width: 1024px) {
+		height: 90px;
+	}
+
+	@media (max-width: 768px) {
+		display: none;
+	}
 
 	&__container {
 		display: flex;
@@ -20,7 +28,19 @@
 		display: flex;
 		align-items: center;
 		gap: 167px;
-		width: 50%;
+		width: 100%;
+
+		@media (max-width: 1440px) {
+			gap: 130px;
+		}
+
+		@media (max-width: 1200px) {
+			gap: 90px;
+		}
+
+		@media (max-width: 1024px) {
+			gap: 50px;
+		}
 
 		& a {
 			width: 135px;
@@ -29,6 +49,21 @@
 			background-position: center;
 			background-size: contain;
 			background-repeat: no-repeat;
+			filter: drop-shadow(3px 3px 10px var(--button-hover));
+		}
+	}
+
+	&__right {
+		display: flex;
+		align-items: center;
+		gap: 98px;
+
+		@media (max-width: 1440px) {
+			gap: 60px;
+		}
+
+		@media (max-width: 1024px) {
+			gap: 30px;
 		}
 	}
 }
