--- a/src/global.css
+++ b/src/global.css
@@ -2,28 +2,39 @@
 	box-sizing: border-box !important;
 	margin: 0;
 	padding: 0;
-	transition: all 0.3s linear;
+	transition: all 0.3s linear !important;
 }
 
 :root[data-theme='dark'] {
 	--primary: #3e3e3e;
 	--secondary: #e09c0e;
+	--button-hover: #ffb515;
 	--secondary-two: #393939;
 	--text: #ffffff;
 	--border-header: #363636;
 	--logo: url('./images/logo-dark.svg');
+	--theme: #ffffff;
 }
 
 :root[data-theme='light'] {
 	--primary: #ffffff;
 	--secondary: #5575e8;
+	--button-hover: #3c66ff;
 	--secondary-two: #ffffff;
 	--text: #161616;
 	--border-header: rgba(223, 223, 223, 0.3);
 	--logo: url('./images/black-logo.svg');
+	--theme: #393939;
 }
 
 body {
 	overflow-x: hidden;
 	background-color: var(--primary);
+}
+
+button {
+	background: none;
+	border: none;
+	outline: none;
+	cursor: pointer;
 }
