--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -13,6 +13,20 @@
 		display: none;
 	}
 
+	&__authButton {
+		height: 48px;
+		padding: 0 70px;
+		border-radius: 50px;
+		background-color: var(--secondary);
+		color: var(--secondary-two);
+		font-size: 20px;
+		font-weight: 400px;
+
+		&:hover {
+			background-color: var(--button-hover);
+		}
+	}
+
 	&__container {
 		display: flex;
 		align-items: center;
