--- a/src/global.css
+++ b/src/global.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+
 * {
 	box-sizing: border-box !important;
 	margin: 0;
 	padding: 0;
 	transition: all 0.3s linear !important;
+	font-family: 'Roboto', sans-serif;
 }
 
 :root[data-theme='dark'] {
@@ -14,6 +17,7 @@
 	--border-header: #363636;
 	--logo: url('./images/logo-dark.svg');
 	--theme: #ffffff;
+	--placeholder: #e09c0e;
 }
 
 :root[data-theme='light'] {
@@ -25,6 +29,7 @@
 	--border-header: rgba(223, 223, 223, 0.3);
 	--logo: url('./images/black-logo.svg');
 	--theme: #393939;
+	--placeholder: #5f6681;
 }
 
 body {
