--- a/src/pages/auth/LoginPage/Login.module.scss
+++ b/src/pages/auth/LoginPage/Login.module.scss
@@ -1,46 +1,29 @@
 @import '../../../styles/mixins';
 
 .login {
-	display: grid;
-	grid-template-columns: auto 1fr;
-	@include adaptive-hero(margin-top, 108, 29);
-
-	&__toRegister {
-		display: flex;
-		flex-direction: column;
-		align-items: flex-start;
-		max-width: 232px;
+	&__label {
 		width: 100%;
-		gap: 20px;
+		display: flex;
+		align-items: flex-start;
+		gap: 5px;
+		flex-direction: column;
+		position: relative;
 
-		@media (max-width: 767px) {
-			max-width: 100%;
-		}
-
-		& p {
-			color: var(--text);
-			@include adaptive-hero(font-size, 16, 20);
-			font-weight: 400;
-		}
-
-		& a {
+		@media (max-width: 1024px) {
 			display: flex;
-			align-items: center;
-			justify-content: center;
-			@include adaptive-hero(padding-top, 12, 15);
-			@include adaptive-hero(padding-bottom, 13, 14);
-			@include adaptive-hero(font-size, 20, 16);
-			font-weight: 400;
-			width: 100%;
-			border-radius: 50px;
-			border: 1px solid var(--secondary);
-			color: var(--secondary);
-			text-decoration: none;
-			background: none;
+			flex-direction: column;
+			align-items: flex-start;
+			gap: 5px;
+		}
 
-			&:hover {
-				background: var(--secondary);
-				color: var(--secondary-two);
+		&:first-child {
+			@include adaptive-hero(margin-bottom, 20, 16);
+		}
+
+		&:nth-child(2) {
+			margin-bottom: 6px;
+			@media (max-width: 768px) {
+				margin-bottom: 12px;
 			}
 		}
 	}
@@ -51,6 +34,11 @@
 		flex-direction: column;
 		max-width: 425px;
 		width: 100%;
+
+		@media (max-width: 768px) {
+			max-width: 100%;
+			margin-bottom: 64px;
+		}
 	}
 
 	&__forgotPassword {
@@ -113,83 +101,18 @@
 		&::placeholder {
 			color: var(--placeholder);
 		}
-
-		&:first-child {
-			@include adaptive-hero(margin-bottom, 20, 16);
-		}
-
-		&:nth-child(2) {
-			margin-bottom: 6px;
-			@media (max-width: 768px) {
-				margin-bottom: 12px;
-			}
-		}
 	}
+}
 
-	&__socials {
-		@include adaptive-hero(margin-right, 220, 0);
+.error {
+	border: 1px solid red;
 
-		@media (max-width: 768px) {
-			margin-right: 0;
+	&__message {
+		font-size: 12px;
+		color: rgb(253, 89, 89);
+
+		@media (max-width: 480px) {
+			font-size: 10px;
 		}
 	}
-
-	&__title {
-		@include adaptive-hero(font-size, 50, 30);
-		@include adaptive-hero(margin-bottom, 62, 29);
-		font-weight: 500;
-		color: var(--text);
-	}
-
-	&__description {
-		@include adaptive-hero(font-size, 16, 14);
-		margin-bottom: 6px;
-		color: var(--text);
-	}
-
-	&__icons {
-		display: flex;
-		align-items: center;
-		@include adaptive-hero(gap, 15.83, 12.17);
-	}
-}
-
-.vk {
-	display: block;
-	@include adaptive-hero(width, 34, 26);
-	@include adaptive-hero(height, 34, 26);
-	background-image: url('../../../images/vkontakte.svg');
-	background-size: contain;
-	background-repeat: no-repeat;
-	background-position: center;
-}
-
-.facebook {
-	display: block;
-	@include adaptive-hero(width, 34, 26);
-	@include adaptive-hero(height, 34, 26);
-	background-image: url('../../../images/facebook.svg');
-	background-size: contain;
-	background-repeat: no-repeat;
-	background-position: center;
-}
-
-.yandex {
-	display: block;
-	@include adaptive-hero(width, 34, 26);
-	@include adaptive-hero(height, 34, 26);
-	background-image: url('../../../images/yandex.svg');
-	background-size: contain;
-	background-repeat: no-repeat;
-	background-position: center;
-}
-
-.google {
-	display: block;
-	@include adaptive-hero(width, 34, 26);
-	@include adaptive-hero(height, 34, 26);
-	background-image: url('../../../images/google.svg');
-	background-size: contain;
-	background-repeat: no-repeat;
-	background-position: center;
 }
