--- a/src/pages/auth/RecoveryPassword/RecoveryPassword.module.scss
+++ b/src/pages/auth/RecoveryPassword/RecoveryPassword.module.scss
@@ -1,6 +1,6 @@
 @import '../../../styles/mixins';
 
-.register {
+.recovery {
 	&__form {
 		display: flex;
 		align-items: flex-start;
@@ -17,26 +17,34 @@
 		}
 	}
 
-	&__forgotPassword {
-		font-size: 12px;
-		color: var(--secondary);
-		margin-bottom: 20px;
-		&:hover {
-			text-decoration: none;
-		}
+	&__label {
+		width: 100%;
+		display: flex;
+		align-items: flex-start;
+		@include adaptive-hero(gap, 20, 10);
+		flex-direction: column;
+		position: relative;
 	}
 
-	&__policy {
-		font-size: 12px;
-		font-weight: 400;
-		color: #7c7c7c;
+	&__input {
+		@include adaptive-hero(padding-bottom, 14, 11);
+		@include adaptive-hero(padding-top, 13, 11);
+		@include adaptive-hero(padding-right, 24, 18.8);
+		@include adaptive-hero(padding-left, 24, 18.8);
+		@include adaptive-hero(border-radius, 40, 20);
+		@include adaptive-hero(font-size, 16, 12);
+		border: 1px solid var(--secondary);
+		width: 100%;
+		background: none;
+		color: var(--text);
 
-		& a {
-			color: #7c7c7c;
+		outline: none;
 
-			&:hover {
-				text-decoration: none;
-			}
+		&::placeholder {
+			color: var(--placeholder);
+		}
+		@media (max-width: 1024px) {
+			order: 2;
 		}
 	}
 
@@ -62,50 +70,29 @@
 
 	&__formDescription {
 		position: absolute;
-		right: -60%;
-		font-size: 12px;
+		right: -63%;
+		@include adaptive-hero(font-size, 16, 14);
 		font-weight: 400;
-		color: #7c7c7c;
+		color: var(--theme);
 		top: 15%;
 
 		@media (max-width: 1024px) {
 			position: static;
-			margin-bottom: -7px;
+			order: 1;
 		}
 	}
 
-	&__label {
-		width: 100%;
-		display: flex;
-		align-items: flex-start;
-		gap: 5px;
-		flex-direction: column;
-		position: relative;
+	&__policy {
+		font-size: 12px;
+		font-weight: 400;
+		color: #7c7c7c;
 
-		@media (max-width: 1024px) {
-			display: flex;
-			flex-direction: column;
-			align-items: flex-start;
-			gap: 5px;
-		}
-	}
+		& a {
+			color: #7c7c7c;
 
-	&__input {
-		@include adaptive-hero(padding-bottom, 14, 11);
-		@include adaptive-hero(padding-top, 13, 11);
-		@include adaptive-hero(padding-right, 24, 18.8);
-		@include adaptive-hero(padding-left, 24, 18.8);
-		@include adaptive-hero(border-radius, 40, 20);
-		@include adaptive-hero(font-size, 16, 12);
-		border: 1px solid var(--secondary);
-		width: 100%;
-		background: none;
-		color: var(--text);
-
-		outline: none;
-
-		&::placeholder {
-			color: var(--placeholder);
+			&:hover {
+				text-decoration: none;
+			}
 		}
 	}
 }
@@ -116,6 +103,7 @@
 	&__message {
 		font-size: 12px;
 		color: rgb(253, 89, 89);
+		order: 3;
 
 		@media (max-width: 480px) {
 			font-size: 10px;
